update workflow file

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -14,7 +14,7 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
-        server: ${{ host }}ftp.mbiasotto.com
-        username: ${{ user }}trabalhos
-        password: ${{ password }} asdQWE123$
+        server: ${{ host }}
+        username: ${{ user }}
+        password: ${{ password }}
         server-dir: public_html/tests/git-actions
