--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -14,7 +14,7 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
-        server: ${{ host }}
-        username: ${{ user }}
-        password: ${{ password }}
+        server: ${{ secrets.host }}
+        username: ${{ secrets.user }}
+        password: ${{ secrets.password }}
         server-dir: public_html/tests/git-actions
